<resources>
    <string name="app_name">DemoLoader</string>
    <string name="action_settings">Settings</string>

    <!-- dialog add new note -->
    <string name="dialog_title">Add new note</string>
    <string name="dialog_add_new_note_title">Title:</string>
    <string name="dialog_add_new_note_value">Note:</string>
    <string name="dialog_save">save</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_continue">I got it</string>
    <string name="dialog_info">your note has been  saved</string>
</resources>
