<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/frame_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title" />

    <EditText
        android:id="@+id/add_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title" />

    <EditText
        android:id="@+id/add_note_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/add_note_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/add_note_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_info"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <Button
            android:id="@+id/add_new_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_cancel" />

        <Button
            android:id="@+id/add_new_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_save" />

        <Button
            android:id="@+id/add_new_continue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_continue"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>